2015-04-02  Nick Clifton  <nickc@redhat.com>

	* binutils-all/readelf.ss-64: Move possible location of the $d
	mapping symbol.

2015-03-26  Renlin Li  <renlin.li@arm.com>

	* binutils-all/readelf.s-64: Support aarch64 case.
	* binutils-all/readelf.ss-64: Likewise.

2015-03-11  Alan Modra  <amodra@gmail.com>

	* binutils-all/update-section.exp: Only run on ELF targets.

2015-03-03  Jiong Wang  <jiong.wang@arm.com>

	* binutils-all/arm/rvct_symbol.s: New testcase.
	* binutils-all/arm/objdump.exp: Run it.

2015-02-26  Andrew Burgess  <andrew.burgess@embecosm.com>

	* binutils-all/update-1.s: New file.
	* binutils-all/update-2.s: New file.
	* binutils-all/update-3.s: New file.
	* binutils-all/update-4.s: New file.
	* binutils-all/update-section.exp: New file.

2015-02-24  Nick Clifton  <nickc@redhat.com>

	* binutils-all/objcopy.exp: Skip the strip-10 test for the V850.

2015-01-01  Alan Modra  <amodra@gmail.com>

	Update year range in copyright notice of all files.

2014-12-26  Alan Modra  <amodra@gmail.com>

	* binutils-all/strip-11.d: New test.
	* binutils-all/objcopy.exp: Run it.

2014-12-06  Eric Botcazou  <ebotcazou@adacore.com>

	* binutils-all/objcopy.exp: Skip strip-10 for Visium.

2014-09-12  Andrew Bennett  <andrew.bennett@imgtec.com>

	* binutils-all/objcopy.exp: Add mips*-img-elf* target triple.
	* binutils-all/readelf.exp: Likewise

2014-09-06  Matthew Fortune  <matthew.fortune@imgtec.com>

	* binutils-all/readelf.ss-mips: Account for new sections.

2014-07-29  Matthew Fortune  <matthew.fortune@imgtec.com>

	* binutils-all/readelf.s: Account for .MIPS.abiflags and
	.gnu.attributes.
	* binutils-all/readelf.ss-tmips: Likewise.
	* binutils-all/strip-3.d: Likewise.

2014-07-10  Will Newton  <will.newton@linaro.org>

	* binutils-all/objcopy.exp: Disable the strip-10 test on
	non-EABI ARM configurations.

2014-06-03  Nick Clifton  <nickc@redhat.com>

	* binutils-all/ar.exp: Skip tests involving bfdtest1 and bfdtest2
	if these executables are not present.
